--- a/client/src/App.css
+++ b/client/src/App.css
@@ -33,20 +33,46 @@
 @keyframes appear {
   0% {
     opacity: 0;
+    transform: translateY(20px);
   }
 
   100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+
+@keyframes appear-sub-subheading {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+
+  30% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+
+  75% {
+    color: #EAF0FF;
+    opacity: 1;
+    transform: translateY(0px);
+  }
+
+  100% {
+    color: darkkhaki;
+    transform: translateY(0px);
     opacity: 1;
   }
 }
 
 @keyframes beigify {
   0% {
-    background-color: white;
+    background-color: #EAF0FF;
   }
 
   100% {
-    background-color: #EDE8D0;
+    background-color: #091227;
   }
 }
 
@@ -65,7 +91,7 @@
 }
 
 :root {
-  background-color: white;
+  background-color: #EAF0FF;
   animation: beigify 0.7s forwards 1.1s;
 }
 
@@ -75,4 +101,20 @@
 
 #homepage-heading.appear-animation {
   animation: appear 0.7s forwards 2.2s;
+}
+
+#homepage-subheading {
+  opacity: 0;
+}
+
+#homepage-subheading.appear-animation {
+  animation: appear 0.7s forwards 2.3s;
+}
+
+#homepage-sub-subheading {
+  opacity: 0;
+}
+
+#homepage-sub-subheading.appear-animation {
+  animation: appear-sub-subheading 2.5s forwards 2.4s;
 }
