--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(74, 74, 74, 0.87);
-  background-color: #EDE8D0;
+  color: #EAF0FF;
+  background-color: #091227;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
