Added menu svg, and moved it to the top right

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -118,3 +118,7 @@
 #homepage-sub-subheading.appear-animation {
   animation: appear-sub-subheading 2.5s forwards 2.4s;
 }
+
+.svg-left-align {
+  text-align: left;
+}
