--- a/client/src/App.css
+++ b/client/src/App.css
@@ -124,7 +124,7 @@
 }
 
 #homepage-heading.appear-animation {
-  animation: appear 0.7s forwards 2.2s;
+  animation: appear 0.7s forwards 1.1s;
 }
 
 #homepage-subheading {
@@ -132,7 +132,7 @@
 }
 
 #homepage-subheading.appear-animation {
-  animation: appear 0.7s forwards 2.3s;
+  animation: appear 0.7s forwards 3.9s;
 }
 
 #homepage-sub-subheading {
@@ -140,7 +140,7 @@
 }
 
 #homepage-sub-subheading.appear-animation {
-  animation: appear-sub-subheading-khaki 2.5s forwards 2.4s;
+  animation: appear-sub-subheading-khaki 3s forwards 3.9s;
 }
 
 #homepage-sub-sub-subheading {
@@ -149,9 +149,37 @@
 }
 
 #homepage-sub-sub-subheading.appear-animation {
-  animation: appear-sub-subheading-white 2.5s forwards 2.4s;
+  animation: appear-sub-subheading-white 3s forwards 3.9s;
 }
 
 .svg-left-align {
   text-align: left;
+}
+
+.side-by-side {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#invisible-spacer-heading-line {
+  width: 50px;
+  visibility: hidden;
+}
+
+#music-theme-selector {
+  width: 50px;
+  opacity: 0;
+}
+
+#music-theme-selector.appear-animation {
+  animation: appear 0.7s forwards 1.1s;
+}
+
+#menu-bars {
+  opacity: 0;
+}
+
+#menu-bars.appear-animation {
+  animation: appear 0.7s forwards 1.1s;
 }
